# llmcal2

./: .gitignore  Readme.md  TODO  pyproject.toml  requirements.txt  sample.csv  upload.py
lists.ok/20newsgroups/: train.txt
lists.old/sst2/: train.txt
lists/20newsgroups/: 16shots_0.txt  16shots_1.txt  16shots_2.txt  16shots_3.txt  16shots_4.txt  2shots_0.txt  2shots_1.txt  (+173 more)
logs/: 2024-09-25-03-00.err  2024-09-26-21-30.err  2024-09-27-08-00.err  2024-09-27-08-00.out
notebooks/: ans_vs_norm.ipynb  generation.ipynb  inspection.ipynb  iterative.ipynb  lists.ipynb  params.ipynb  posteriors.ipynb  posteriors2.ipynb  samples.ipynb  sequence_lengths.ipynb
prompts/: basic_20newsgroups.yaml  basic_agnews.yaml  basic_banking77.yaml  basic_dbpedia.yaml  basic_sst2.yaml
scripts/: affine_calibration.sh  all.sh  all2.sh  bert.sh  create_lists.sh  cross_datasets.sh  download_models.sh  dp_calibration.sh  echo_early_stopped.py  env.sh  few_shot.sh  few_shot_plus_dp_cal.sh  generative_no_adaptation.sh  iterative_cal.sh  lora.old.sh  lora.sh  lora_all.sh  lora_all_plus_dp_cal.sh  lora_matched.sh  lora_matched_no_es.sh  lora_matched_plus_dp_cal.sh  lora_mismatched.sh  lora_mismatched_few_shot.sh  lora_mismatched_few_shot_plus_dp_cal.sh  lora_mismatched_plus_dp_cal.sh  lora_no_es.sh  lora_norm.sh  lora_norm_approx.sh  lora_norm_approx_no_es.sh  lora_norm_no_es.sh  lora_norm_plus_affine_cal_no_es.sh  lora_normdp.sh  lora_plus_affine_cal_no_es.sh  lora_plus_dp_cal.sh  lora_plus_lora_on_val.sh  no_adaptation.sh  prepare_data.sh  prepare_datasets.sh  prepare_prompts.sh  results.sh  (+2 more)
(+810 files in other folders)
