[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmcal2"
version = "0.0.1"
authors = [
  { name="Lautaro Estienne", email="lestienne@fi.uba.ar" },
]
description = "Direction Preserving Calibration on LLMs"
readme = "README.md"
requires-python = "==3.10.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LautaroEst/llmcal"
Issues = "https://github.com/LautaroEst/llmcal/issues"